--- a/src/Search/ResultCard.css
+++ b/src/Search/ResultCard.css
@@ -1,46 +1,23 @@
-.card {
-  margin-left: 10vw;
-  margin-right: 10vw;
+#Card {
+  padding: 10px;
 }
-.fistLayer{
-  display: flex;
+.Images {
+  display: block;
+  padding-right: 10px;
 }
-
-#morePhotos {
-  margin-left: 80%;
-  background-image: linear-gradient(
-    to right,
-    #72bb2a 0%,
-    #a0dd49 51%,
-    #c9f57d 100%
-  ) !important;
-  padding: 0px !important;
-  text-transform: capitalize;
-}
-.secondLayerOfImg {
-  display: flex;
-}
-.firstImage {
-  width: 33vw;
-  height: 25vh;
-  object-fit: cover;
-  padding: 0px;
-  border: 1px solid white;
-}
-.secondImage {
-  width: 11vw;
-  height: 15vh;
-  padding: 0px;
-  object-fit: cover;
+.bottomImage {
   margin-top: -7px;
-  border-left: 1px solid white;
-  }
-.brief {
-  padding-left: 10px;
-}
-.fistLayer {
   display: flex;
-  padding: 20px;
+  flex-direction: row;
+  justify-content: space-between;
+}
+#firstImage {
+  width: 328px;
+  height: 200px;
+}
+#secondImage {
+  width: 108px;
+  height: 100px;
 }
 .title {
   font-weight: bold;
@@ -68,6 +45,8 @@
   width: fit-content;
   color: white;
   border-radius: 5px;
+  display: flex;
+  flex: 1;
 }
 .desc {
   color: gray;
@@ -77,19 +56,16 @@
 }
 .icon {
   border-right: 1px solid white;
+  padding: 0px 5px 0px 5px;
 }
 .verified {
   font-size: 17px !important;
 }
-span {
-  padding: 5px;
-}
-.viewDetails {
+.viewDetailsBtn {
   display: flex;
-  justify-content: center;
   padding-bottom: 10px;
 }
-.viewDetails  Button{
+.viewDetailsBtn Button {
   background-image: linear-gradient(
     to right,
     #72bb2a 0%,
@@ -98,4 +74,24 @@ span {
   ) !important;
   padding: 3px 10px 3px 10px;
   text-decoration: none !important;
+}
+#more {
+  display: none;
+}
+
+@media (min-width: 900px) {
+  .firstRow {
+    display: flex;
+  }
+  .brief {
+    padding-left: 5px;
+  }
+  #firstImage {
+    width: 600px;
+    height: 200px;
+  }
+  #secondImage {
+    width: 199px;
+    height: 100px;
+  }
 }
